Updated contact form layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,10 +73,12 @@
                 <!-- BLOG SECTION END -->
 
                 <!-- CONTACT SECTION -->
-                <section id="contact">
-                        <div class="container">
+                <section id="contact" class="flex-container-column">
+                        <div class="section-header">
                                 <h2>Contact</h2>
                                 <p>Get in touch</p>
+                        </div>
+                        <div class="section-content">
                                 <form>
                                         <div class="form-group">
                                                 <input type="text" class="form-control" id="nameInput"
