--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,53 @@ h1 {
     font-size: 130px;
 }
 
+textarea {
+    resize: none;
+}
+
+.flex-container-column {
+    display: flex;
+    /* align-items: center; */
+    /* align-content: space-around; */
+    /* justify-content: center;  */
+    flex-direction: column;
+    /* position: relative; */
+}
+
+.section-header {
+    flex: 1.3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* width: 50%; */
+    /* background-color: blue; */
+    /* position: absolute; */
+    /* top: 10%; */
+}
+
+.section-content {
+    flex: 3;
+    /* width: 50%; */
+    /* background-color: red; */
+    /* position: absolute; */
+}
+
+form {
+    width: 50%;
+    margin-left: 25%;
+    height: 50%;
+    background-color: yellow;
+}
+
+.section-header>h2 {
+    font-size: 6em;
+}
+
+.section-header>p {
+    font-size: 2em;
+}
+
 .welcomeGreeting {
     /* background-color: blue; */
     margin: auto;
@@ -42,5 +89,4 @@ h1 {
 #footer {
     height: 100px;
     background-color: yellow;
-    
 }
