--- a/css/main.css
+++ b/css/main.css
@@ -1,165 +1,175 @@
-section {
-    /* height: 100vh; */
-}
-
-/* keeps the side scroll disabled. */
-html, body {
-    max-width: 100%;
-    overflow-x: hidden;
-}
-
-h1 {
-    font-size: 130px;
-}
-
-h2 {
-    /* background-color: blue; */
-    font-size: 6rem;
-    /* width: 100%;
-    height: 100%; */
-}
-
-h3 {
-    text-align: center;
-}
-
-h5 {
-    margin-top: 11px;
-    margin-bottom: 0px;
-}
-
-p {
-    text-align: justify;
-}
-
-hr {
-    display: block;
-    width: 40%;
-    background-color: black;
-    height: 4px;
-}
-
-textarea {
-    resize: none;
-}
-
-form {
-    width: 50%;
-    /* margin: 0; */
-    margin-bottom: 0px;
-    /* background-color: yellow; */
-}
-
-footer {
-    height: 100px;
-    background-color: #001011;
-}
-
-@media(min-width:768px) {
-    .box {
-        padding: 15px;
-        background-color: #093A3E;
-        height: 80%;
-        flex: 0.2;
-        color: #E0E0CE;
-        box-shadow: 5px 5px 6px #888888;
-        border-radius: 10px;
-    }
-}
-
-.sticky {
-    position: fixed;
-    top: 0;
-    z-index: 1;
-    right: 0;
-    left: 0;
-}
-
-.projects-grid-container {
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-}
-
-.about-grid-container {
-    display: grid;
-    margin-left: 15%;
-    margin-right: 15%;
-    width: 70%;
-    grid-template-columns: 25% 45%;
-}
-
-.flex-center-column {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.flex-center-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.section-parent {
-    position: relative;
-}
-
-.section-header {
-    position: absolute;
-    height: 30%;
-    width: 100%;
-    top: 0px;
-    /* background-color: red; */
-}
-
-.section-content {
-    position: absolute;
-    height: 70%;
-    width: 100%;
-    bottom: 0px;
-}
-
-.section-header>p {
-    font-size: 2em;
-}
-
-.welcomeGreeting {
-    /* background-color: blue; */
-    margin: auto;
-    color: rgb(218, 213, 213);
-    font-family: 'Montserrat';
-    /* font-style: italic; */
-}
+/* CLASS SELECTORS */
 
 .backgroundPic {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/lobostudio-hamburg-359753-unsplash.jpg);
     background-size: cover;
-    /* opacity: 0.6; */
     width: auto;
     height: 100vh;
+}
+
+.profile-pic {
+    border-radius: 25px;
+    width: 200px;
+    height: auto;
+}
+
+.profile-description {
+    padding: 20px;
+    /* text-align: center; */
+}
+
+.p-0 {
+    padding: 0;
+}
+
+.h-100 {
+    height: 100%;
+}
+
+.mt-auto {
+    margin-top: auto;
+}
+
+.mb-auto {
+    margin-bottom: auto;
+}
+
+.mr-auto {
+    margin-right: auto;
+}
+
+.ml-auto {
+    margin-left: auto;
+}
+
+.m-auto {
+    margin: auto;
+}
+
+.box {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.box-shadow {
+    box-shadow: 5px 10px 10px;
+}
+
+.x {
+    width: 20%;
+}
+
+.page-section {
+    padding: 6rem 0;
+}
+
+.page-section-heading {
+    font-size: 3.25rem;
+    line-height: 2rem;
+}
+
+.m {
+    margin: 0;
+}
+
+.mb-0 {
+    margin-bottom: 0 !important;
+}
+
+.ml-0 {
+    margin-left: 0px;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.text-justify {
+    text-align: justify;
+}
+
+.card-img {
+    /* display: inline-block; */
+}
+
+.icon-background {
+    color: red;
+}
+
+/* ELEMENT SELECTORS */
+
+main {
+    padding-top: 500px;
+}
+
+hr {
+    border: 3px solid black;
+    border-radius: 5px;
+    width: 35%;
+}
+
+html {
+    scroll-behavior: smooth;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+section {
+    min-height: 90vh;
+    padding: 8rem 0;
+}
+
+/* ID SELECTORS */
+
+#profile-card {
+    /* background-color: #3A1818; */
+}
+
+#navbar {
+    height: 11vh;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 
 #about {
-    background-color: #E6C79C;
+    /* background-color: #EFACAC; */
 }
 
 #projects {
-    background-color: #E0E0CE;
+    /* background-color: red; */
 }
 
 #blog {
-    background-color: #E6C79C;
+    /* background-color: blue; */
 }
 
 #contact {
-    background-color: #E0E0CE;
+    /* background-color: red; */
 }
 
-#footer {}
+#about-anchor, #projects-anchor, #blog-anchor, #contact-anchor {
+    visibility: hidden;
+    display: block;
+    position: relative;
+    top: -10vh;
+}
 
-#navbar {
-    
+#profile-description {}
+
+#profile-pic {}
+
+#bio-details {
+    /* padding-top: 40px; */
+}
+
+/* OTHER SELECTORS */
+
+.fa-lg:hover {
+    opacity: 0.5;
 }
