--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,7 @@
                                 </ul>
                         </div>
                 </nav>
+
                 <!-- NAV BAR END -->
         </header>
 
@@ -65,12 +66,12 @@
                         <div class="container-fluid">
                                 <h2 class="page-section-heading text-center text-secondary">ABOUT</h2>
                                 <hr style="visibility: hidden;">
-                                <div class="row justify-content-center border">
-                                        <div class="col-xs-6 col-md-2 border">
-                                                <img src="images/profile-pic.png" class="card-img"
+                                <div class="row justify-content-center">
+                                        <div id="profile-pic-container" class="col-md-auto p-0">
+                                                        <img id="me" src="images/profile-pic.png" class="img-fluid"
                                                         alt="Profile Picture">
                                         </div>
-                                        <div id="profile-card" class="col-md-7 card border box-shadow">
+                                        <div id="profile-card" class="col-md-6 card">
                                                 <div class="row no-gutters">
                                                         <div class="card-body">
                                                                 <p class="card-text text-justify">
